style.css
html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

header {
    font-size: 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    color: #F9FAF8;
    padding: 20px 15%;
}

h2, h4 {
    padding: 0;
    margin: 0;
}

p {
    padding: 0;
    margin: 0;
}

button {
    background-color: #3882F6;
    color: #F9FAF8;
    border-radius: 7px;
    padding: 7px 25px;
    margin: 10px 0;
    min-width: 9em;
}

.header-links {
    display: flex;
    justify-content: right;
    align-items: center;
    max-width: 40%;
    gap: 15px;
    flex: 1;
}

.header-link {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
    text-align: center;
}

 .hero-sec {
    background-color: #1F2937;
    color: #E5E7EB;
    padding: 90px 15%;
    display: flex;
    align-items: center;
 }

 .hero-text {
   margin: 0 30px 0 0;
   width: 50%;
 }

 #hero-main {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: bolder;
    padding: 0;
    margin: 0;
 }

 .hero-sec button {
   border: none;
}

 .hero-sec img {
    height: 220px;
    width: 50%;
    background-color: gray;
 }
 
 .information-sec {
    color: gray;
    margin: 40px 17% 100px;
    text-align: center;
 }

 .info-imgs {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 40px;
    gap: 40px;
    flex: 0;
 }

 #info-header {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
 }
 
 .information-sec img {
   border: 3px solid #3882F6;
   border-radius: 10px;
   flex: 0;
   min-height: 175px;
   min-width: 175px;
   max-width: 175px;
 }

 .pic-caption {
   width: 175px;
 }

 .quote-sec {
    background-color: #E5E7EB;
    color: #1F2937;
    padding: 100px 20%;
 }

 #hero-quote {
    font-size: 36px;
    font-weight: 300;
    text-align: left;
 }

 #quote-author {
   text-align: right;
   margin: 0 50px;
 }

 .call-to-action-sec {
    background-color: #3882F6;
    color: #F9FAF8;
    padding: 40px 90px;
    margin: 100px 15%;
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    gap: 30px;
 }

 .call-to-action-sec button {
    border: 2px solid #F9FAF8;
 }

 footer {
    background-color: #1F2937;
    color: #F9FAF8;
    text-align: center;
    padding: 35px;
 }

